admission-contollers/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-privileged-pod
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
