admission-contollers/constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDenyPrivileged
      validation:
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyprivileged

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := "❌ Privileged containers are not allowed by platform policy"
        }

        violation[{"msg": msg}] {
          input.review.object.spec.securityContext.privileged == true
          msg := "❌ Privileged containers are not allowed by platform policy"
        }
